toList() fix